# StreamLinkerino

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  streamlinkerino.pro  submodulesdialog.cpp  submodulesdialog.h  submodulesdialog.ui  windowsmatchingpid.cpp
Patch/: chatterino.patch
src/: CMakeLists.txt  ChatterinoMonitor.cpp  ChatterinoMonitor.h  ChatterinoWidget.cpp  ChatterinoWidget.h  DebugOverlay.cpp  DebugOverlay.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Submodules.cpp  Submodules.h  SubmodulesDialog.ui  WindowsMatchingPID.cpp  WindowsMatchingPID.h  resources.qrc
src/Forms/: MainWindow.ui  SubmodulesDialog.ui
src/scripts/: get-window-list
